Fix on body z-index and adding titles to anchors

--- a/assets/scss/breakpoints/_768up.scss
+++ b/assets/scss/breakpoints/_768up.scss
@@ -4,3 +4,26 @@ Author: Felipe Rodopoulos
 
 Stylesheet: Tablet & Small Desktop Stylesheet
 *******************************************************************************/
+
+
+.the_box {
+  position : relative;
+
+  &:after {
+    content : "";
+		top: 5px; left: 8px;
+    background : $white;
+    border : 3px solid $black;
+    width : 100%;
+    height : 100%;
+    position : absolute;
+    z-index : -1;
+  }
+}
+
+
+.info {
+  a {
+    width : 49%;
+  }
+}
