--- a/assets/scss/breakpoints/_base.scss
+++ b/assets/scss/breakpoints/_base.scss
@@ -4,14 +4,15 @@ Author: Felipe Rodopoulos
 Stylesheet: Mobile phones and small tablets
 *******************************************************************************/
 
-html, body{
-	height: 100%;
+html,
+body {
+  height : 100%;
 }
 
 
 body {
-	overflow-x: hidden;
-	background: $gray;
+  overflow-x : hidden;
+  background : $gray;
 }
 
 
@@ -19,31 +20,42 @@ body {
 	#BASE TAGS
 ******************************************************************************/
 // Links
-a, a:visited {
-	cursor: pointer;
-	color: $black;
+a,
+a:visited {
+  cursor : pointer;
+  color : $black;
 
-	&:hover, &:focus { }
-	&:active { }
-	&:link { -webkit-tap-highlight-color : rgba( 0, 0, 0, 0.3 );	}
+
+
+  &:link {
+    -webkit-tap-highlight-color : rgba( 0, 0, 0, 0.3 );
+  }
 }
 
 // Headings
-h1, h2, h3, h4, h5 {
-	text-rendering: optimizelegibility;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-rendering : optimizelegibility;
 }
 
 
 /******************************************************************************
 	#HOLY GRAIL
 ******************************************************************************/
-body{
-	display: flex;
-	flex-direction: column;
+body {
+  display : flex;
+  flex-direction : column;
 }
 
-header { flex: 0 0 auto; }
-main { flex: 1 0 auto; }
+header {
+  flex : 0 0 auto;
+}
+main {
+  flex : 1 0 auto;
+}
 
 
 
@@ -53,46 +65,44 @@ main { flex: 1 0 auto; }
 	#PAGE
 ******************************************************************************/
 header {
-	padding: 15px 0;
-	width: 100%;
-	background: $blue;
-	color: $white;
-	text-align: center;
-	max-height: 60px;
-	overflow: hidden;
+  padding : 15px 0;
+  width : 100%;
+  background : $blue;
+  color : $white;
+  text-align : center;
+  max-height : 60px;
+  overflow : hidden;
 }
 
 main {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  z-index: 0;
+  display : flex;
+  align-items : center;
+  justify-content : center;
 
-	background: #f3f4f4; /* Old browsers */
-	background: -moz-linear-gradient(top,  #f3f4f4 85%, #2a35f4 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  #f3f4f4 85%,#2a35f4 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom,  #f3f4f4 85%,#2a35f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f4f4', endColorstr='#2a35f4',GradientType=0 ); /* IE6-9 */
-
+  background :    -moz-linear-gradient(top,  $gray 85%, $blue 100%); /* FF3.6-15 */
+  background : -webkit-linear-gradient(top,  $gray 85%, $blue 100%); /* Chrome10-25,Safari5.1-6 */
+  background :   linear-gradient(to bottom,  $gray 85%, $blue 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$gray', endColorstr='$blue',GradientType=0 ); /* IE6-9 */
 }
 
 .the_box {
-	max-width: 500px;
-	padding: 26px 23px;
-	border: 6px solid $black;
-	background: $white;
-	margin-bottom: 5%;
+  max-width : 500px;
+  margin-bottom : 5%;
+  padding : 26px 23px;
+  border : 3px solid $black;
+  background : $white;
+  text-align: center;
 }
 
 .info {
-	a {
-		width: 49%;
-		text-align: center;
-		display: inline-block;
-		margin-bottom: 20px;
-	}
+  a {
+    width : 100%;
+    display : inline-block;
+    margin-bottom : 20px;
+  }
 }
 
 .tiny {
-	font-size: 75%;
-	text-align: center;
+  font-size : 75%;
 }
